...
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/user" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="24sp" />
...
