...
        android:theme="@style/Theme.Meili.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/launchChatView"
        android:text="Launch Reviews"/>

    <Button
        android:id="@+id/launchForumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        style="@style/Theme.Meili.button"
        android:theme="@style/Theme.Meili.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/launchReviewView"
        android:text="Launch Forum View"/>

    <Button
        android:id="@+id/launchPoiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
...
